@@ -99,6 +99,8 @@ static struct gsubr_t gschem_funcs[] = {
   { "attribute-name",            1, 0, 0, g_rc_attribute_name },
   { "paper-size",                2, 0, 0, g_rc_paper_size },
   { "paper-sizes",               3, 0, 0, g_rc_paper_sizes },
+  { "postscript-font-scale",     1, 0, 0, g_rc_postscript_font_scale },
+
   /* text-output is old... will eventually be removed! */
   { "text-output",               1, 0, 0, g_rc_output_text }, 
   { "output-text",               1, 0, 0, g_rc_output_text },
