@@ -1,3 +1,10 @@
+2007-02-10  Mike Jarabek  <mjarabek@sentex.ca>
+
+	* include/i_vars.h include/prototype.h lib/system-gschemrc.in
+	src/g_rc.c src/g_register.c src/i_vars.c: Added code to scale the
+	output postscript font under user control.  This is controlled via
+	the postscript-font-scale rc keyword.
+
 2007-02-10 Carlos Nieves Onega <cnieves@iespana.es>
 
 	* scheme/auto-place-attribs.scm: Check if the list is empty before
